# jlux

./: .gitignore  README.md  main.py  pyproject.toml  tool.md
jlux/: __init__.py
jlux/dit/: __init__.py  adaln.py  attention.py  double.py  modulation.py  norms.py  rope.py  single.py
jlux/dit/blocks/: __init__.py  double.py  single.py
jlux/dit/layers/: __init__.py  adaln.py  attention.py  embed.py  final.py  mlp.py  modulation.py  norms.py  rope.py
jlux/dit/modules/: attention.py  mlp.py  norms.py  rope.py
jlux/model/: __init__.py  flux.py  load_model.py  pipeline.py
jlux/sampler/: __init__.py  euler.py
jlux/text/: __init__.py  clip.py  t5.py
jlux/vae/: __init__.py  vae.py
scripts/: benchmark.py  dump_namespace.py  generate.py  pytree_shapes.py  test_fwd.py  test_load.py  test_pipeline.py  test_schedule.py
tests/: test_double.py  test_rope.py  test_single.py
