[project]
name = "jlux"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = [
    "jax[cuda12]",
    "equinox",
    "jaxtyping",
    "optax",
    "safetensors",
    "huggingface_hub",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["jlux"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
