[project]
name = "jlux"
version = "0.0.1"
description = "JAX/Equinox implementation of FLUX.1 with weight-loading compatibility for Black Forest Labs checkpoints."
requires-python = ">=3.12"
authors = [
    { name = "Alex" },
]
license = { text = "MIT" }
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    # core jax stack
    "jax[cuda12]>=0.4.31",
    "equinox>=0.11",
    "jaxtyping>=0.2",
    "optax>=0.2",
    "safetensors>=0.4",
    "huggingface_hub>=0.20",
    # --- temporary torch interop for text encoders + VAE; drop when JAX-native ---
    "torch>=2.5",
    "transformers>=4.45",
    "diffusers>=0.30",
    "sentencepiece>=0.2",
    "protobuf>=4.25",
    "accelerate>=0.30",
    "einops>=0.8.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.6",
]

[tool.uv.sources]
torch = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["jlux"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
